--- a/README
+++ b/README
@@ -2,6 +2,8 @@ Simple replay of apache log files, bodged together from little bits of python an
 
 Currently full of @todo's, needs a refactor to clean it up and probably bugs as well but surprisingly it actually works!
 
+Name from a combination of myself and https://github.com/robyoung so don't just blame me!
+
 Licensed under The MIT License, see LICENSE file for details
 
-Documentation is in the github wiki at https://github.com/tomsinger/edbar/wiki
+Documentation is in the github wiki at https://github.com/tomsinger/replayr/wiki
